deploy: 7903180578a2526448d61dfbf333adcdca8728a9

--- a/resources.html
+++ b/resources.html
@@ -145,7 +145,7 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
-<p>At Bipolar Risk, we’re excited to introduce a unique and innovative concept – a “phygital” collaborative space that combines the best of physical and online environments. Inspired by the concept of <em>community allotments and gardens</em>, we’re creating a dynamic platform for resource exchange and community engagement: <a href="kit.htlm">The Personalised Recovery and Resilience Kit (PeRRK)</a> Also visit the visual and written description of the <a href="pagoda_closeread.htlm">pagoda as a metaphor for mental wellness</a>.</p>
+<p>At Bipolar Risk, we’re excited to introduce a unique and innovative concept – a “phygital” collaborative space that combines the best of physical and online environments. Inspired by the concept of <em>community allotments and gardens</em>, we’re creating a dynamic platform for resource exchange and community engagement: <a href="kit.html">The Personalised Recovery and Resilience Kit (PeRRK)</a> Also visit the visual and written description of the <a href="pagoda_closeread.html">pagoda as a metaphor for mental wellness</a>.</p>
 <p><strong>What You Can Expect:</strong></p>
 <ul>
 <li><p><strong>Inspired by Community Allotments:</strong> Like community allotments and gardens found throughout the UK, our space intends to maximize the potential of small parcels of land to produce valuable outcomes.</p></li>
