deploy: bb6319f0a91e2b948c3133613793ae8e314181ed

--- a/kit.html
+++ b/kit.html
@@ -38,7 +38,7 @@ ul.task-list li input[type="checkbox"] {
 <link href="site_libs/quarto-html/quarto-syntax-highlighting-d4d76bf8491c20bad77d141916dc28e1.css" rel="stylesheet" id="quarto-text-highlighting-styles">
 <script src="site_libs/bootstrap/bootstrap.min.js"></script>
 <link href="site_libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
-<link href="site_libs/bootstrap/bootstrap-8647a4a42273f773479d27c00df3f9ed.min.css" rel="stylesheet" append-hash="true" id="quarto-bootstrap" data-mode="light">
+<link href="site_libs/bootstrap/bootstrap-12858c9ce0885248945210bbd3c85d1a.min.css" rel="stylesheet" append-hash="true" id="quarto-bootstrap" data-mode="light">
 <script id="quarto-search-options" type="application/json">{
   "location": "navbar",
   "copy-button": false,
@@ -148,6 +148,7 @@ ul.task-list li input[type="checkbox"] {
 <hr>
 <p>People living with bipolar face significant risks of engaging in unpredictable, time-limited, yet devastating behaviours such as substance abuse, hypersexuality, relationship breakdown, self-harm, and financial recklessness. Current mental health support strategies focus primarily on regulating mood in order to reduce the likelihood of further risky behaviours. However, this support is often only available after people have already engaged in risky behaviours and suffered the negative consequences. We think it would be better for people to learn more about risk-taking and decision-making before they experience mood episodes. Therefore, people are more aware of what is happening to them and make better decisions that may not have the same negative outcomes. However, this is a new area of research that is still being developed.</p>
 <p>This is why we are working on the Personalised Recovery and Resilience Kit (PeRRK), a participatory approach inspired by the precision and wisdom of Japanese craftsmanship. It encapsulates the transformative potential of human-AI collaboration. You may find that Japanese <a href="https://en.wikipedia.org/wiki/Metaphor">metaphors</a> work well for you, but there are alternative metaphors that will work with the structure of the kit; feel free to personalise your individual kit by creating your own personal metaphor. However, for the purpose of creating a general outline for this kit, we are using the structurally supportive and sound principles of Japanese craftmanship. Below you will find the kit, where you can click on each section to learn more about the different elements.</p>
+<p>Access the PeRRK in <em>Spanish</em> <a href="kit_spanish.html">here</a>.</p>
 <hr>
 <p><strong>The Kit</strong></p>
 <div class="tabset-margin-container"></div><div class="panel-tabset">
@@ -156,7 +157,7 @@ ul.task-list li input[type="checkbox"] {
 <div id="tabset-1-1" class="tab-pane active" role="tabpanel" aria-labelledby="tabset-1-1-tab">
 <p><img src="images/wtm_transparent.png" class="img-fluid" style="float: left; margin-right: 1em; margin-bottom: 0.5em;" width="80"></p>
 <p><strong>Why This Matters</strong></p>
-<p>Bipolar Disorder is a complex mental health condition that profoundly impacts those living with it, as well as their families and communities. The UK’s NHS provides <a href="https://www.nhs.uk/mental-health/conditions/bipolar-disorder/">more information</a> about the condition. Despite advancements in treatments and technologies, managing bipolar often requires more than clinical interventions. It demands empathy, learning from lived experience, self-management, creativity, and adaptability. These human qualities remain irreplaceable, even in an era of sophisticated technology.</p>
+<p>Bipolar is a complex mental health condition that profoundly impacts those living with it, as well as their families and communities. The UK’s NHS provides <a href="https://www.nhs.uk/mental-health/conditions/bipolar-disorder/">more information</a> about the condition. Despite advancements in treatments and technologies, managing bipolar often requires more than clinical interventions. It demands empathy, learning from lived experience, self-management, creativity, and adaptability. These human qualities remain irreplaceable, even in an era of sophisticated technology.</p>
 <p>By bringing together the lived experiences of individuals with bipolar, insights from caregivers and mental health professionals, and technological resources, we are developing a kit that empowers people to navigate their unique journeys with greater confidence and support. By helping people to live in recovery, they will be empowered to live the lives they want to live.</p>
 </div>
 <div id="tabset-1-2" class="tab-pane" role="tabpanel" aria-labelledby="tabset-1-2-tab">
