--- a/kit_spanish.html
+++ b/kit_spanish.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>Resources - Virtual Allotment – Bipolar Risk</title>
+<title>Personalised Recovery and Resilience Kit (PeRRK) - Spanish Version – Bipolar Risk</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -102,7 +102,7 @@ ul.task-list li input[type="checkbox"] {
 <span class="menu-text">Bipolar Risk Blog</span></a>
   </li>  
   <li class="nav-item">
-    <a class="nav-link active" href="./resources.html" aria-current="page"> 
+    <a class="nav-link" href="./resources.html"> 
 <span class="menu-text">Resources - Virtual Allotment</span></a>
   </li>  
   <li class="nav-item">
@@ -128,7 +128,7 @@ ul.task-list li input[type="checkbox"] {
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">Resources - Virtual Allotment</h1>
+<h1 class="title">Personalised Recovery and Resilience Kit (PeRRK) - Spanish Version</h1>
 </div>
 
 
@@ -145,18 +145,70 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
-<p>At Bipolar Risk, we’re excited to introduce a unique and innovative concept – a “phygital” collaborative space that combines the best of physical and online environments. Inspired by the concept of <em>community allotments and gardens</em>, we’re creating a dynamic platform for resource exchange and community engagement: <a href="kit.html">The Personalised Recovery and Resilience Kit (PeRRK)</a>. Also, explore the visual and written depiction of the <a href="pagoda_closeread.html">pagoda, used here as a metaphor for mental wellness</a>.</p>
-<p><strong>What You Can Expect:</strong></p>
-<ul>
-<li><p><strong>Inspired by Community Allotments:</strong> Like community allotments and gardens found throughout the UK, our space intends to maximize the potential of small parcels of land to produce valuable outcomes.</p></li>
-<li><p><strong>Active Engagement:</strong> We believe in active engagement, where participants contribute, share, and exchange resources to create meaningful outcomes.</p></li>
-<li><p><strong>Positive Impact on Wellbeing:</strong> Just like community allotments, our space promotes wellbeing by fostering a sense of community, connection, and purpose.</p></li>
-<li><p><strong>Promoting Responsible Behaviors:</strong> We encourage responsible behaviors among participants, promoting values of knowledge exchange, diversity, and sustainability.</p></li>
-<li><p><strong>Guided by Clear Rules:</strong> Our space operates within clear guidelines, ensuring safety, respect, and inclusivity for all participants.</p></li>
-<li><p><strong>Transparent and Replicable:</strong> Just like community allotments, our model is transparent and easy to replicate, allowing for the creation of similar spaces in different contexts.</p></li>
-</ul>
-<p>Join us in this exciting journey of collaboration, innovation, and community building.</p>
-<p><img src="allotment.png" class="img-fluid"></p>
+<hr>
+<p><strong>The Kit en Español</strong></p>
+<div class="tabset-margin-container"></div><div class="panel-tabset">
+<ul class="nav nav-tabs" role="tablist"><li class="nav-item" role="presentation"><a class="nav-link active" id="tabset-1-1-tab" data-bs-toggle="tab" data-bs-target="#tabset-1-1" role="tab" aria-controls="tabset-1-1" aria-selected="true"><img src="images/wtm_transparent.png" class="img-fluid" style="vertical-align:middle;" width="20"> ¿Por qué es importante?</a></li><li class="nav-item" role="presentation"><a class="nav-link" id="tabset-1-2-tab" data-bs-toggle="tab" data-bs-target="#tabset-1-2" role="tab" aria-controls="tabset-1-2" aria-selected="false"><img src="images/earthquakemetaphor_transparent.png" class="img-fluid" style="vertical-align:middle;" width="30"> La Metáfora del Terremoto</a></li><li class="nav-item" role="presentation"><a class="nav-link" id="tabset-1-3-tab" data-bs-toggle="tab" data-bs-target="#tabset-1-3" role="tab" aria-controls="tabset-1-3" aria-selected="false"><img src="images/craftingresilience_transparent.png" class="img-fluid" style="vertical-align:middle;" width="25"> Forjando Resiliencia</a></li><li class="nav-item" role="presentation"><a class="nav-link" id="tabset-1-4-tab" data-bs-toggle="tab" data-bs-target="#tabset-1-4" role="tab" aria-controls="tabset-1-4" aria-selected="false"><img src="images/relationship_transparent.png" class="img-fluid" style="vertical-align:middle;" width="30"> La Relación Maestro-Aprendiz</a></li><li class="nav-item" role="presentation"><a class="nav-link" id="tabset-1-5-tab" data-bs-toggle="tab" data-bs-target="#tabset-1-5" role="tab" aria-controls="tabset-1-5" aria-selected="false"><img src="images/complexity_transparent.png" class="img-fluid" style="vertical-align:middle;" width="30"> Desarmando la Complejidad</a></li><li class="nav-item" role="presentation"><a class="nav-link" id="tabset-1-6-tab" data-bs-toggle="tab" data-bs-target="#tabset-1-6" role="tab" aria-controls="tabset-1-6" aria-selected="false"><img src="images/solutions_transparent.png" class="img-fluid" style="vertical-align:middle;" width="30"> Soluciones a Medida: Respeto por la Individualidad</a></li><li class="nav-item" role="presentation"><a class="nav-link" id="tabset-1-7-tab" data-bs-toggle="tab" data-bs-target="#tabset-1-7" role="tab" aria-controls="tabset-1-7" aria-selected="false"><img src="images/preparedness_transparent.png" class="img-fluid" style="vertical-align:middle;" width="30"> Preparación para Situaciones Extremas</a></li><li class="nav-item" role="presentation"><a class="nav-link" id="tabset-1-8-tab" data-bs-toggle="tab" data-bs-target="#tabset-1-8" role="tab" aria-controls="tabset-1-8" aria-selected="false"><img src="images/strength_transparent.png" class="img-fluid" style="vertical-align:middle;" width="30"> Encontrar Fortaleza en la Reparación</a></li></ul>
+<div class="tab-content">
+<div id="tabset-1-1" class="tab-pane active" role="tabpanel" aria-labelledby="tabset-1-1-tab">
+<p><img src="images/wtm_transparent.png" class="img-fluid" style="float: left; margin-right: 1em; margin-bottom: 0.5em;" width="80"></p>
+<p><strong>¿Por qué es importante?</strong></p>
+<p>La Bipolaridad es una problema de salud mental que tiene un profundo impacto en quienes lo viven, repercutiendo también en familiares, amigos y en la comunidad. A pesar de los avances terapéuticos y el uso de nuevas tecnologías, manejar la Bipolaridad requiere más que de intervenciones clínicas: exige empatía, compartir experiencias de vida, creatividad y capacidad de adaptación. Estas cualidades humanas siguen siendo irremplazables, incluso en este tiempo de avanzada tecnología.</p>
+<p>Al reunir el conocimiento fruto de las experiencias de vida de personas con bipolaridad, las perspectivas de familiares y profesionales de la salud mental, y recursos tecnológicos avanzados, estamos construyendo un marco que anima a las personas para transitar sus trayectorias personales con mayor confianza y apoyo.</p>
+</div>
+<div id="tabset-1-2" class="tab-pane" role="tabpanel" aria-labelledby="tabset-1-2-tab">
+<p><img src="images/earthquakemetaphor_transparent.png" class="img-fluid" style="float: left; margin-right: 1em; margin-bottom: 0.5em;" width="90"></p>
+<p><strong><em>La Metáfora del Terremoto</em></strong></p>
+<p>Vivir con el Trastorno Bipolar (TB) puede sentirse como transitar un terreno lleno de terremotos repentinos e impredecibles. Los altibajos en el humor, como si fueran sismos y réplicas, pueden alterar la vida cotidiana y dejar a las personas y sus redes de apoyo tratando de recuperar la estabilidad perdida. ¿Cómo podemos prepararnos para esa incertidumbre al mismo tiempo que fomentar la resiliencia y la recuperación?</p>
+<p><img src="images/ggpagoda6.png" class="img-fluid" style="display:block; margin-left:auto; margin-right:auto;" width="60"></p>
+<p>El PeRRK se inspira en el diseño antisísmico de las pagodas japonesas, estructuras que han resistido siglos de actividad sísmica. Estas pagodas muestran flexibilidad y fortaleza, utilizando principios como uniones entrelazadas y la presencia de un pilar central que absorbe los impactos mientras mantiene la estabilidad.</p>
+<p>En el contexto de la Bipolaridad, la pagoda se convierte en una metáfora de la resiliencia: un punto de referencia donde cada “nivel” representa un aspecto vital del bienestar, desde la salud física y emocional hasta el apoyo social y las estrategias de afrontamiento. Las experiencias humanas, combinadas con la precisión de la inteligencia artificial, pueden ayudar a crear herramientas que se alinean con las necesidades de cada persona, construyendo un sistema que se adapta a los desafíos de la vida, así como la pagoda se adapta a las fuerzas de la naturaleza, <a href="pagoda_closeread.html">click here</a>.</p>
+</div>
+<div id="tabset-1-3" class="tab-pane" role="tabpanel" aria-labelledby="tabset-1-3-tab">
+<p><img src="images/craftingresilience_transparent.png" class="img-fluid" style="float: left; margin-right: 1em; margin-bottom: 0.5em;" width="90"></p>
+<p><strong><em>Forjando Resiliencia</em></strong></p>
+<p>La resiliencia no se construye de un día para el otro, resulta de un proceso continuo de aprendizaje, adaptación y crecimiento. En la artesanía japonesa, principios como <em>kaizen</em> (mejora continua) y <em>wabi-sabi</em> (aceptación de la imperfección) ofrecen una sabiduría que resuena profundamente en el ámbito de la salud mental.</p>
+<p><em>Kaizen</em> nos enseña a valorar el progreso constante y gradual, en lugar de buscar la perfección inmediata. En salud mental, esto puede traducirse en celebrar logros pequeños, como mantener una rutina diaria o pedir apoyo, ya que estos pasos sientan las bases para un bienestar duradero.</p>
+<p><em>Wabi-sabi</em>, por otro lado, nos invita a encontrar la belleza en la imperfección y la transitoriedad. Se trata de aceptar que la vida, la recuperación y nuestras propias estrategias de afrontamiento no siempre serán perfectas—y eso está bien. Para alguien que vive con Trastorno Bipolar, esto puede significar asumir los retrocesos como oportunidades para aprender y crecer.</p>
+<p>Por ejemplo, una persona que participa en nuestro proyecto describió su camino de recuperación como una colcha de retazos: cada pieza es imperfecta, pero contribuye a un todo único y significativo. Esa colcha, al igual que la resiliencia, se fortalece con el tiempo, a través del cuidado y el esfuerzo consciente.</p>
+</div>
+<div id="tabset-1-4" class="tab-pane" role="tabpanel" aria-labelledby="tabset-1-4-tab">
+<p><img src="images/relationship_transparent.png" class="img-fluid" style="float: left; margin-right: 1em; margin-bottom: 0.5em;" width="90"></p>
+<p><strong><em>La Relación Maestro-Aprendiz</em></strong></p>
+<p>En la artesanía, la relación entre maestro y aprendiz es una piedra fundamental del aprendizaje y el crecimiento. El maestro transmite no solo habilidades, sino también valores como la paciencia, la precisión y la dedicación. Este mismo principio cumple un rol fundamental en el cuidado de la salud mental y en nuestro proyecto PeRRK.</p>
+<p>El acompañamiento fomenta la colaboración y la confianza entre personas con Bipolaridad, familiares y profesionales de la salud mental. Cada uno aporta un saber distinto: experiencias de vida, cuidado compasivo o conocimiento clínico. Juntos, crean herramientas y estrategias adaptadas a las necesidades individuales, combinando la sabiduría de cada perspectiva.</p>
+<p>Por ejemplo, una persona compartió cómo un compañero de su grupo de apoyo—alguien que también experimenta los desafíos de la Bipolaridad, le ayudó a atravesar momentos difíciles. A través de consejos prácticos y apoyo emocional, el mentor encarnó la resiliencia y la autocompasión, inspirándola para afrontar su propio camino con mayor confianza.</p>
+<p>El acompañamiento genera un efecto multiplicador, empoderando tanto a quien guía como a quien recibe el apoyo, y enriqueciendo a toda la comunidad. Este espíritu colaborativo es el motor de nuestro enfoque de creación compartida, asegurando que el PeRRK refleja los desafíos y soluciones del mundo real.</p>
+</div>
+<div id="tabset-1-5" class="tab-pane" role="tabpanel" aria-labelledby="tabset-1-5-tab">
+<p><img src="images/complexity_transparent.png" class="img-fluid" style="float: left; margin-right: 1em; margin-bottom: 0.5em;" width="90"> <strong><em>Desarmando la Complejidad</em></strong></p>
+<p>Los desafíos complejos, como manejar la Bipolaridad, pueden resultar abrumadores. Pero así como los artesanos enfrentan diseños intrincados dividiéndolos en pasos manejables, nuestro enfoque en el PeRRK adopta una estrategia gradual y participativa para diseñar soluciones.</p>
+<p>Esto implica trabajar de forma colaborativa, paso a paso, para crear herramientas que sean significativas, prácticas y fáciles de usar. Las personas que participan del programa, individuos con TB, familiares-amigos y profesionales, aportan sus ideas en distintas etapas, lo que garantiza que el proceso no sea apresurado ni agobiante. Cada pequeño paso contribuye a construir un marco coherente que refleja la experiencia cotidiana de vivir y manejar la Bipolaridad.</p>
+<p>Este respeto por la individualidad fomenta un sentido de pertenencia y empoderamiento, lo que contribuye a mejores resultados y mayor resiliencia.</p>
+</div>
+<div id="tabset-1-6" class="tab-pane" role="tabpanel" aria-labelledby="tabset-1-6-tab">
+<p><img src="images/solutions_transparent.png" class="img-fluid" style="float: left; margin-right: 1em; margin-bottom: 0.5em;" width="90"> <strong><em>Soluciones a Medida: Respeto por la Individualidad</em></strong></p>
+<p>No hay dos caminos iguales en la experiencia de la Bipolaridad, y por eso el PeRRK está diseñado en base al respeto por la individualidad como principio central. Inspirado en la artesanía, que valora las propiedades únicas de cada material, el PeRRK adapta sus herramientas para responder a las necesidades, fortalezas y vulnerabilidades específicas de cada persona.</p>
+<p>Guiado por inteligencia artificial, el kit organiza de forma dinámica los aportes de individuos, familiares-amigos y profesionales en un marco personalizado y con sentido. Por ejemplo, una persona compartió cómo su plan personalizado incluía elementos sensoriales calmantes para momentos de mucha angustia e instrucciones para reflexionar sobre su progreso a través de la escritura. Estas estrategias diseñadas a medida le ayudaron a sentirse más en control y acompañada en su camino personal.</p>
+<p>La personalización, facilitada por la combinación de saberes humanos e inteligencia artificial, asegura que el PeRRK se adapte a las necesidades cambiantes de cada individuo. Este respeto por la individualidad fomenta un sentido de pertenencia y empoderamiento, lo que contribuye a mejores resultados y mayor resiliencia.</p>
+</div>
+<div id="tabset-1-7" class="tab-pane" role="tabpanel" aria-labelledby="tabset-1-7-tab">
+<p><img src="images/preparedness_transparent.png" class="img-fluid" style="float: left; margin-right: 1em; margin-bottom: 0.5em;" width="90"></p>
+<p><strong><em>Preparación para Situaciones Extremas</em></strong></p>
+<p>En momentos de crisis, estar preparado lo es todo. Inspirado en los principios de <em>mottainai</em> (eficiencia) y <em>waza</em> (maestría a través de la repetición), el PeRRK ofrece herramientas diseñadas para responder de forma rápida y eficaz ante situaciones de crisis en salud mental.</p>
+<p><em>Mottainai</em> nos enseña a centrarnos en lo esencial, usar los recursos con sentido para estabilizar una situación sin generar carga adicional. Esto se traduce en intervenciones simples y eficientes, como un ejercicio de anclaje sensorial o una frase calmante que pueda utilizarse de inmediato cuando las emociones se intensifican.</p>
+<p>A su vez, <em>waza</em> resalta la importancia de dominar ciertas técnicas mediante la práctica constante, hasta que se vuelvan automáticas. Por ejemplo, una persona contó cómo practicar respiración pausada a diario le permitió recurrir a esa técnica de forma instintiva durante un momento de ansiedad extrema, evitando que la situación se agravara y recuperando la calma.</p>
+<p>El PeRRK incorpora estos principios mediante herramientas de acceso rápido como ejercicios de respiración, técnicas de anclaje y elementos sensoriales. Estas intervenciones están pensadas para ofrecer alivio inmediato y generar un espacio para la recuperación y la reflexión.</p>
+</div>
+<div id="tabset-1-8" class="tab-pane" role="tabpanel" aria-labelledby="tabset-1-8-tab">
+<p><img src="images/strength_transparent.png" class="img-fluid" style="float: left; margin-right: 1em; margin-bottom: 0.5em;" width="90"> <strong><em>Encontrar Fortaleza en la Reparación</em></strong></p>
+<p>Los desafíos de la vida pueden hacernos sentir quebrados, pero el arte japonés del <em>kintsugi</em> nos recuerda que reparar también puede dar lugar a algo aún más bello.</p>
+<p><em>Kintsugi</em>, o “reparar con oro”, consiste en arreglar cerámicas rotas con metales preciosos, resaltando las grietas en lugar de ocultarlas. ¿El resultado? Una pieza única y resistente que cuenta su historia a través de sus cicatrices.</p>
+<p>En salud mental y recuperación, el <em>kintsugi</em> es una metáfora poderosa para encontrar fortaleza en las dificultades. El PeRRK adopta esta filosofía, alentando a las personas a no ver los desafíos como fracasos, sino como oportunidades de crecimiento y transformación.</p>
+<p>Recuperarse no es borrar lo que se rompió, sino abrazar las imperfecciones y salir de la experiencia más fuerte, y siendo auténticamente tú.</p>
+</div>
+</div>
+</div>
 
 
 
